# cyprus-elections-2026

./: .env.example  .gitignore  README.md  ideas.md  pyproject.toml
config/: config.yaml  districts.yaml  parties.yaml
dashboard/: .firebaserc  README.md  firestore.rules  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
dashboard/public/data/: candidates.json  cyprus-districts.geojson  history.json  meta.json  stats.json
dashboard/src/: App.tsx  index.css
dashboard/src/components/: CorrectionCTA.tsx  CoverageBar.tsx  CyprusMap.tsx  DataSource.tsx  Disclaimer.tsx  KPICard.tsx  LangBadge.tsx  LocaleSwitch.tsx  PartyBadge.tsx  PredictionCard.tsx  ProvenancePill.tsx  SectionHeader.tsx  ThemeToggle.tsx  TimelineMatrix.tsx
dashboard/src/data/: load.ts  predict-store.ts  store.ts  types.ts
dashboard/src/lib/: firebase.ts  i18n.ts  store.ts  theme.ts  utils.ts
dashboard/src/pages/: CandidateProfile.tsx  DataQuality.tsx  Demographics.tsx  Digital.tsx  Education.tsx  Explore.tsx  Explorer.tsx  Highlights.tsx  Overview.tsx  Parties.tsx  Predict.tsx  Professions.tsx  SubmitCorrection.tsx  Timeline.tsx
scripts/: export_to_google_sheet.py  run_pipeline.sh  sync_airtable_suggestions.py  sync_google_sheet_suggestions.py
src/cyprus_elections/: cli.py  config.py  db.py  fetch.py  fetch_js.py  ingest.py  llm.py  merge.py  models.py  normalize.py  state.py  validate.py
src/cyprus_elections/curation/: airtable_sync.py  (+1 more)
tests/: test_llm_generic.py  test_normalize.py  test_scrapers.py
tests/fixtures/: akel.html  volt.html
(+18 files in other folders)
