[project]
name = "cyprus-elections-2026"
version = "0.1.0"
description = "Candidate data pipeline for Cyprus parliamentary elections, May 2026"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "unidecode>=1.3",
    "pyairtable>=2.3",
    "python-dotenv>=1.0",
    "tenacity>=8.3",
    "platformdirs>=4.2",
    "pypdf>=4.0",
    "google-api-python-client>=2.194.0",
    "google-auth>=2.49.2",
    "playwright>=1.58.0",
]

[project.optional-dependencies]
js = ["playwright>=1.44"]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
cyprus-elections = "cyprus_elections.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cyprus_elections"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
